2002-05-31  Alex Larsson <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Draw drop shadows if use_drop_shadows.
	
	* libnautilus-private/nautilus-icon-container.c:
	Implement nautilus_icon_container_set_use_drop_shadows.
	Use light color for labels if use_drop_shadows.
	
	* libnautilus-private/nautilus-icon-container.h:
	Add new function nautilus_icon_container_set_use_drop_shadows.
	
	* libnautilus-private/nautilus-icon-private.h:
	Add use_grop_shadow variable.
	
	* src/file-manager/fm-desktop-icon-view.c:
	Call nautilus_icon_container_set_use_drop_shadows()

2002-05-31  Damon Chaplin  <damon@ximian.com>

	* src/nautilus-application.c
	(nautilus_application_create_desktop_window): realize the desktop
	window immediately, and do a gdk_flush(), so the
	NAUTILUS_DESKTOP_WINDOW_ID property is set and gnome-settings-daemon
	can tell that nautilus is running. Fixes part of #74311.

2002-05-31  Michael Meeks  <michael@ximian.com>

	* components/adapter/nautilus-adapter-file-load-strategy.c
	(nautilus_adapter_file_load_strategy_load_location): upd.
	(get_file_load_method): impl.

	* components/adapter/nautilus-adapter-stream-load-strategy.c
	(nautilus_adapter_stream_load_strategy_load_location): upd.
	(unref_stream_cb, get_stream_load_method): impl.

	* components/adapter/nautilus-adapter-load-strategy.c
	(nautilus_adapter_load_strategy_load_async): impl.
	(nautilus_adapter_load_strategy_report_async_status): impl.
	(nautilus_adapter_load_strategy_report_load_failed),
	(nautilus_adapter_load_strategy_report_load_complete): prune.

2002-05-31  Michael Meeks  <michael@ximian.com>

	* src/file-manager/fm-directory-view.c
	(display_pending_idle_callback): only NIL the idle_id
	if we are going to return FALSE and disconnect
	ourselves #83591

2002-05-30  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-desktop-icon-view.c (fm_desktop_icon_view_init): Setup the
	root window to receive PropertyNotify events.

2002-05-30  Dave Camp  <dave@ximian.com>
