@@ -1,3 +1,8 @@
+2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>
+
+	* nautilus-window-menus.c : Added the help callback to link the 
+	  Help documents present under user-guide for nautilus.
+	  
 2002-05-31  Alex Larsson <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
